# player

./: result  settings.gradle  sh.sh  t  t.patch
app/: build.gradle  result  t
app/src/androidTest/java/com/xm/testcodec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Demuxer.cpp  Demuxer.h  HWVideoEncoder.cpp  HWVideoEncoder.h  Muxer.cpp  Muxer.h  Player.cpp  Player.h  UERead.cpp  UERead.h  VideoDecoder.cpp  VideoDecoder.h  native-lib.cpp  utils.cpp  utils.h
app/src/main/cpp/audio_device/: OpenSLESCommon.cpp  OpenSLESCommon.h  OpenSLESPlayer.cpp  OpenSLESPlayer.h  OpenSLESRecorder.cpp  OpenSLESRecorder.h
app/src/main/cpp/back/: Demuxer.cpp  Demuxer.h
app/src/main/cpp/base/: CMakeLists.txt  MiThread.cpp  MiThread.h  matrixUtil.cpp  matrixUtil.h  utils.cpp  utils.h
app/src/main/cpp/render/: GlScreen.cpp  GlScreen.h  egl_base.cpp  egl_base.h  tex_transform_util.cpp  tex_transform_util.h  texture_render.cpp  texture_render.h
app/src/main/cpp/test-mediacodec/: Demuxer.cpp  Demuxer.h
app/src/main/cpp/x264/lib/pkgconfig/: x264.pc
app/src/main/cpp/yuan/: Demuxer.cpp  Demuxer.h
app/src/main/java/com/xm/player/: MiPlayer.java
app/src/main/java/com/xm/testcodec/: MainActivity.java  TouchGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xm/testcodec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
